base_aux/webs_front/d1_front2_css/universal_root.css
/* -------------------------------------------------------------------------------------------------------------------*/
@import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wdth@8..144,25..151&display=swap');

/* -------------------------------------------------------------------------------------------------------------------*/
/* important
    color: white !important;
 */

/* -------------------- BUILDIN --------------------*/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background: #f1f4f8;
    font-family: system-ui, 'Segoe UI', 'Roboto', 'Helvetica Neue', sans-serif; /*с этим чуть лучше! чем дефолтный!!!*/
    padding: 2rem 1.5rem;
}

hr {
    margin: 1rem 0;
}

[disabled] {
    opacity: 0.5;
    cursor: not-allowed;
    pointer-events: none;
}

html {
    scroll-behavior: smooth;  /* глобальная плавная прокрутка */
}
/* Отступ для фиксированной навигации (если есть sticky) */
:target {
    scroll-margin-top: 80px;
}

/* -------------------------------------------------------------------------------------------------------------------*/
/* DEBUGGING - VISUAL SELECTING ALL BLOCKS
ON PRODUCTION - COMMENT OUT!
*/
div, p,
form,
ul, ol, dl,
section, article,
header, main, footer,
body, html
{
    border: 1px dashed #aaa5;    /* НЕЛЬЗЯ СТАВИТЬ ВООБЩЕ НА ВСЕ!!! сломаются как минимум ProgressMeter!!! */
}

/* ================================================================================================================== */
/* -------------------------------------------------------------------------------------------------------------------*/
/* -------------------- ROOT IDS -----------------*/
#ROOT_DIV__ID {
    max-width: 1400px;
    margin: 0 auto;
    border-radius: 2rem;
    padding: 2rem 2rem 2.5rem 2rem;
    //overflow: hidden;

    background: white;
    box-shadow: 0 20px 35px -12px rgba(0, 0, 0, 0.1);
}

#ROOT_HEADER__ID {
    display: flex;
    justify-content: space-between;
    align-items: center;

    margin-bottom: 1rem;
    border-bottom: 1px solid #444;
}
#ROOT_HEADER__ID h1 {
    font-size: 2.2rem;
    font-weight: 700;
    margin-bottom: 0.5rem;
}

#ROOT_NAV__ID {
    /* stick top */
    position: sticky;
    top: 0;
    background: white;  /* нужно, чтобы не просвечивало содержимое */
    z-index: 100;

    /* other */
    display: flex;
    flex-wrap: wrap;
    padding-bottom: 0.5rem;
    border-bottom: 2px solid #e2e8f0;
}

#ROOT_MAIN__ID {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

#ROOT_FOOTER__ID {
    margin-top: 2rem;
    text-align: center;
    font-size: 0.8rem;
    color: #5b6e8c;
    border-top: 1px solid #e2e8f0;
    padding-top: 1.5rem;
}

/* ================================================================================================================== */
/* -------------------------------------------------------------------------------------------------------------------*/
[data-skip]
{
    /* just mark to skip in some cases */
}

[data-counter_index]
{
    display: inline-block;
    text-align: center;

    font-size: 0.8rem;
    min-width: 1.6rem;
    border-radius: 0.4rem;

    border: 1px solid #000;

    user-select: none;
}

/* -------------------------------------------------------------------------------------------------------------------*/
/* items for visual explorations */
[data-item_square],
[data-item_rounded]
{
    padding: 1rem;
    text-align: center;

    border: 1px solid black;

    color: black;
    text-shadow: 0 0 3px white;

    background: #0ff3;
}
[data-item_rounded]
{
    border-radius: 2rem;
}

/* ================================================================================================================== */
/* -------------------------------------------------------------------------------------------------------------------*/
/* !IMPORTANT === inline styles - имеют приоритет!!! поэтому нужно его перебить!!! */
[data-all_revert] { all: revert !important; }
[data-action_hover__all_revert]:hover { all: revert !important; }

[data-action_hover__transform_revert]:hover { transform: revert !important; }
[data-action_hover__shadow]:hover { box-shadow: 0 4px 8px rgba(0,0,0,0.5); }

[data-cursor__clickable]    { cursor: pointer; /* no hover!!!*/ }

/* ---------------- SELECTIONS -------------------- */
[data-mouse_select__all] { user-select: all; }
[data-mouse_select__none] { user-select: none; }

/* ---------------- SCROLLING ----------------------*/
[data-overflow_auto]
{
    overflow: auto;  /* add scroll bars if overflow */
}

/* ---------------- ALIGN ----------------------*/
[data-align_center__text]
{
    text-align: center;
    vertical-align: middle;
}

/* ================================================================================================================== */
/* -------------------- ATTRS USER -----------------------------------------------------------------------------------*/
/* --------------------COLOR --------------------*/
[data-color_black]      { color: #000; }
[data-color_white], .msg_stdin__cls
                        { color: #fff; }

[data-color_green], .msg_stdout__cls
                        { color: #ada; }
[data-color_red], .msg_stderr__cls
                        { color: #faa; }
[data-color_blue], .msg_debug__cls
                        { color: #5af; }

[data-color_yellow]     { color: #ff0; }
[data-color_magenta]    { color: #f0f; }
[data-color_cian]       { color: #0ff; }

/* -------------------- BG --------------------*/
[data-bg_a1]        { background: #aaa1; }
[data-bg_a3]        { background: #aaa3; }
[data-bg_a5], output,
  [data-bg_grey]    { background: #aaa5; }
[data-bg_a7]        { background: #aaa7; }
[data-bg_a9]        { background: #aaa9; }
[data-bg_aB]        { background: #aaaB; }
[data-bg_aD]        { background: #aaaD; }

[data-bg_red]       { background: #f005; }
[data-bg_green]     { background: #0f05; }
[data-bg_blue]      { background: #00f5; }

[data-bg_yellow]    { background: #ff05; }
/* ... */

